--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="words line1">Bebe</div>
             <div class="words line2">Quiero decirte lo mucho que te quiero </div>
             <div class="words line3">y espero tomar tu mano por mucho tiempo mas</div>
-            <div class="words line4">le mando un besito y abrazo mi yami                 ❤</div>
+            <div class="words line4">le mando un besito y abrazo mi yami                .❤</div>
         </div>
         <div class="hearts">
             <div class="heart a1"></div>
